<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/clarifyingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:gravity="center_horizontal"
        android:text="@string/title_set_time"
        android:textAllCaps="true"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="serif-monospace"
        android:includeFontPadding="false"
        android:textSize="100sp"
        android:visibility="gone" />


    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="2"
        android:textSize="100sp" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title_start"
        android:fontFamily="serif-monospace"
        android:textAllCaps="true"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/pauseButton"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="Pause"
            android:textAllCaps="true"
            android:fontFamily="serif-monospace"
            android:textSize="30sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="Cancel"
            android:textAllCaps="true"
            android:fontFamily="serif-monospace"
            android:textSize="30sp"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>