<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="0.35"
    android:id="@+id/layout_planning_game"
    android:layout_gravity="center_horizontal" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000"
        android:orientation="horizontal"></LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Fibonacci"
        android:id="@+id/button_fibonacci"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.25"
        android:background="#2E313A"
        android:textColor="#FFF"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000"
        android:orientation="horizontal"></LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Power Of Two"
        android:id="@+id/button_power_of_two"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.25"
        android:background="#2E313A"
        android:textColor="#FFF"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000"
        android:orientation="horizontal"></LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Standard"
        android:id="@+id/button_standard"
        android:layout_weight="0.25"
        android:background="#2E313A"
        android:textColor="#FFF"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000"
        android:orientation="horizontal"></LinearLayout>



</LinearLayout>


