...
    <string name="label_author_name">Author: </string>
    <string name="label_author_email">Email: </string>
    <string name="label_branch">Branch: </string>
    <string name="label_message">Message: </string>
    <string name="label_commit_link">More info: </string>
    <string name="title_planning_game">Planning Game</string>
    <string name="label_select">Select</string>
    <string name="title_welcome">Welcome</string>
    <string name="title_welcome_subtitle">To the Pair Programming Assistant</string>
    <string name="title_home">Home</string>

    <!-- Github commit Details Label-->
    <string name="github_commit_details">Comment: </string>
...
