package com.group9.eda397.ui.fragments;
/*
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.test.suitebuilder.annotation.LargeTest;

import com.group9.eda397.ui.fragments.ChooseTimeFragment;

import org.junit.Before;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.typeText;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.contrib.DrawerActions.open;
/*


/**
 * Created by Isabelle on 2016-04-27.
 */
/*@RunWith(AndroidJUnit4.class)
@LargeTest
*/
public class ChooseTimeFragmentTester{
/*    ChooseTimeFragment fragment;

    @Rule
    public ActivityTestRule<MainActivity> mActivityRule = new ActivityTestRule<>(
            MainActivity.class);

    @Before
    public void setup() {
        fragment = ChooseTimeFragment.newInstance("fragment");
    }

    @Test
    public void testStartingTheTimer(){
        String time = "10";
        onView(withId(R.id.drawer_layout)).perform(open());

        onView(withId(R.layout.countdown_timer)).perform(open()).check(matches(isDisplayed()));
        onView(withId(R.id.clarifyingText)).check(matches(isDisplayed()));
        onView(withId(R.id.editText)).perform(click(),typeText(time)).check(matches(isDisplayed()));
        onView(withId(R.id.startButton)).perform(click());
        onView(withId(R.id.cancelButton)).check(matches(isDisplayed()));
        onView(withId(R.id.textView)).check(matches(isDisplayed()));
        onView(withId(R.id.pauseButton)).check(matches(isDisplayed()));
        //onView(withId(R.id.pauseButton)).perform(click());
        //onView(withId(R.id.pauseButton)).check(matches(isDisplayed()));

    }
*/}